Spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
  background-color: #6C7A89;
  font-size: 18px;
- line-height: 25px;
+ line-height: 35px;
  color: #E4F1FE;
 }
 
@@ -119,7 +119,7 @@ a {
 
 .gray {
   background-color: rgb(51,51,51);
-
+  padding-bottom: 10px;
   clear:both;
   display: block;
 }
